--- a/FoodTracker/FoodTracker/Info.plist
+++ b/FoodTracker/FoodTracker/Info.plist
@@ -41,6 +41,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allows you to add photos to your meals. (Addition)</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allows you to add photos to your meals.</string>
 </dict>
